fix: adjusted padding on inputsets header to avoid error overlap on close button (#3287)

--- a/src/modules/70-pipeline/components/RunPipelineModal/RunPipelineModal.module.scss
+++ b/src/modules/70-pipeline/components/RunPipelineModal/RunPipelineModal.module.scss
@@ -149,7 +149,7 @@
   display: flex;
   justify-content: space-between !important;
   padding-left: var(--spacing-xlarge) !important;
-  padding-right: var(--spacing-xlarge) !important;
+  padding-right: var(--spacing-11) !important;
 }
 
 .run-modal-sub-heading {
